[bdist_wheel]
universal = 1

[metadata]
name = cijoe
version = attr: cijoe.core.__version__
author = Simon A. F. Lund
author_email = os@safl.dk
maintainer = Simon A. F. Lund
maintainer_email = os@safl.dk
description = A loosely coupled approach to systems development and testing
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
url = https://cijoe.readthedocs.io/

classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Framework :: Pytest
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Topic :: Software Development :: Testing
  Topic :: Software Development
  Topic :: Text Processing
  Topic :: Utilities

project_urls=
  homepage = https://cijoe.readthedocs.io/
  documentation = https://cijoe.readthedocs.io/
  repository = https://github.com/refenv/cijoe
  changelog = https://github.com/refenv/cijoe/blob/main/CHANGELOG.md

[options]
requires_python = >=3.9
setup_requires =
  wheel
install_requires =
  importlib_resources >= 2.0; python_version <= '3.9'
  jinja2
  paramiko
  pytest
  pytest-random-order >= 1.0.0
  pytest-reportlog
  pyyaml
  requests
  psutil
  scp
  setuptools>=54
  tomli >= 1.1.0 ; python_version < '3.11'
  tomli-w
  watchdog

zip_safe = False
packages = find_namespace:
package_dir =
  = src

[options.packages.find]
where = src

[options.package_data]
* = *.html, *.config, *.perfreq, *.toml, *.yaml, *.workflow, *.user, *.meta, *.jinja2
[options.entry_points]
console_scripts =
  cijoe = cijoe.cli.cli:main

pytest11 =
  cijoe = cijoe.pytest_plugin.hooks_and_fixtures
